osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[str [or] wut].txt
error: expected simple type in `Union`
--> main.sml:1:11
     |
   1 | Foo: str | wut = JsonData(path='$.foo')
     |            ^ got unknown non-generic type `wut`